Fix spacing between geo map and user statistics cards on servers overview.

--- a/src/css/Settings.css
+++ b/src/css/Settings.css
@@ -663,7 +663,13 @@ h2.settings-page__h2-with-icon > .icon {
 }
 
 .servers-overview-geo-map {
-  margin-bottom: 1.5rem;
+  margin-bottom: 2rem;
+}
+
+.servers-overview-user-details {
+  display: flex;
+  flex-direction: column;
+  gap: 1.25rem;
 }
 
 .settings-card__header {
